--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-
 /*-- Main --*/
 
 main {
 	max-width: 1200px;
 	margin: 0 auto;
 }
+
+/* Content Container */
 .container {
 	width: 90%;
 	margin: 0 auto;
@@ -47,6 +48,8 @@ footer {
 
 /*-- Colums --*/
 
+/* Left Col */
+
 #col-1 {
 	display: inline-block;
 	float: left;
@@ -54,6 +57,8 @@ footer {
 	padding-left: 20px;
 	margin-bottom: 40px;
 }
+
+/* Right Col */
 
 #col-2 {
 	display: inline-block;
@@ -65,12 +70,16 @@ footer {
 
 /*-- Images --*/
 
+/* Small Image in Button */
+
 #home-img {
 	display: inline-block;
 	padding: 0 5px 0 0;
 	margin-right: 5px;
 	float: left;
 }
+
+/* Instagram Logo Image */
 
 #brand-img {
 	position: relative;
@@ -98,9 +107,10 @@ footer {
 	padding: 0 8px 0 5px;
 }
 
+/*-- Badges --*/
+
 #badge-container {
 	margin-top: 60px;
-	
 }
 
 #badge-container img {
