--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*-- To Hide Scroll --*/
+
+body, html { 
+    overflow: hidden;
+    position:fixed;
+}
+
 /*-- Main --*/
 
 main {
@@ -10,7 +17,7 @@ main {
 	width: 90%;
 	margin: 0 auto;
 	position: relative;
-	bottom: 200px;
+	bottom: 175px;
 }
 
 h1 {
